Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL)
-
None
Description
When the mariadb slave (error) stops at receiving the event there's no description
of what led to it. Neither in the event nor in the master's error log.
Partly that issue was covered by an upstream patch:
@commit 68cbdee45628349c82cbcf3f530b8859615a3f38
Author: Bill Qu <bill.qu@Oracle.com>
Date: Wed Sep 18 10:27:41 2013 +0800
Bug #17258782 MASTER DIDN'T WRITE ERROR MESSAGE IN THE LOG FILE FOR INCIDENT
Master is not generating error message to log file
when writing an incident event to binlog. So user
is not alerted that slave servers will be stopped
by the incident event later.
...
Attachments
Issue Links
- relates to
-
MDEV-21443 Donot report INCIDENT_EVENT in binary log for transactional changes which are safely rolledback
-
- Closed
-