MDEV-21087: ER_SLAVE_INCIDENT arrives at slave without failure specifics